    have the ability to stop the measurement at the hardware level, NICOS will
    check that the preset is reached and stop in software.  This allows, for
    example, measuring until a certain number of counts in a region of interest
    is reached.

* GUI

  - Qt 5 is now preferred if installed, and Qt 4 can be forced by setting
    "NICOS_QT=4" in the environment.


Release 3.6.0
-------------

* Core

  - In data acquisition, detector prepare() is now called after setPreset().

  - The command-line client can now display subsecond timestamps.

  - Experiments can now force single count()s to produce a scan dataset
    with one point.

  - A device parameter can now be defined as "internal", which means that it is
    managed exclusively by the device's code, and not accepted in setup files.

  - Non-Readable devices now also have an "active in dry-run" flag.

  - The new parameter validator "oneofdict_or" allows naming some special
    device values while also supporting unnamed values inbetween.

  - The collector daemon can now map device keys when forwarding between caches.

  - Added a Lorentzian fitter for use in the GUI and fit commands.

  - Daemon user authenticators can now add metadata to the returned User
    objects.

* GUI

  - The display of the executed script now includes line numbers.

  - The device panel shows more actions for non-moveable devices, such as
    reset and enable/disable.

  - A new panel is available for low-level access to PLC devices following
    the PILS specification.

  - The Qt monitor now supports scale/offset specifiers for plotted values.

  - The standalone history application now also supports saved presets,
    restoring views, and listing the available keys for display, and it allows
    choosing the cache server to use.

  - Tabs in a tab bar guiconfig element can now be displayed on the left side.

* Devices

  - Added a debugging data sink.

  - Added a Tango MotorAxis device.
