@@ -44,7 +44,6 @@ devices = dict(
         obs = [],
         precision = 0,
         loopdelay = 0.02,
-        loglevel = 'debug',
     ),
     aliasAxis = device('nicos.devices.generic.DeviceAlias',
         alias = 'axis',
@@ -104,12 +103,18 @@ devices = dict(
         obs = [],
         precision = 0,
         loopdelay = 0.02,
-        loglevel = 'debug',
     ),
     nolimit_motor = device('nicos.devices.generic.VirtualMotor',
         unit = 'mm',
         curvalue = 0,
         abslimits = (-100, 100),
         userlimits = (-50, 50),
+    ),
+    prec_axis = device('nicos.devices.generic.Axis',
+        motor = 'motor',
+        coder = None,
+        obs = [],
+        precision = 0.2,
+        loopdelay = 0.02,
     ),
 )
