@@ -22,6 +22,11 @@ Unreleased changes
   - Qt 5 is now preferred if installed, and Qt 4 can be forced by setting
     "NICOS_QT=4" in the environment.
 
+* Commands
+
+  - Added new core commands "rmove()" and "rmaw()" for relative movement
+    of devices.
+
 
 Release 3.6.0
 -------------
